Make textareas larger, fix ugly whitespace in board descriptions

--- a/less/app.main.less
+++ b/less/app.main.less
@@ -391,7 +391,7 @@ form {
     }
 
     textarea {
-      height: 5rem;
+      height: 15rem;
     }
   }
 }
